added dark modej

--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@ body {
   background: #fff7f0;
   color: #4e342e;
 }
+
+
+body.dark {
+  background: #2c2c2c;
+  color: #f5f5f5;
+}
+
+
 * {
   margin: 0;
   padding: 0;
@@ -96,3 +104,5 @@ footer {
   opacity: 1;
   transform: translate(0);
 }
+
+
