--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@ body {
 }
 
 
+#btn{
+  border: none;
+  padding: 5px;
+  background-color: bisque;
+  border-radius: 10%;
+}
+
+
 body.dark {
   background: #2c2c2c;
   color: #f5f5f5;
@@ -22,12 +30,26 @@ body {
   font-family: Arial,sans-serif;
 }
 
+.nav-container{
+
+  display: flex;
+   background-color: #4b2e2e;
+   justify-content: flex-end;
+   align-items: center;
+  
+}
+
 .navbar {
-  background-color: #4b2e2e;
+
+  display: flex;
+  
+  list-style-type: none;
+ 
   padding: 15px;
 }
 
 .nav-links {
+  list-style-type: none;
   display: flex;
   justify-content: center;
   gap: 40px;
