added css style

--- a/menu.css
+++ b/menu.css
@@ -1,11 +1,17 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #fff8f0;
+  background-color: #e8ebbd;
   margin: 0;
   padding: 0;
-}
+ background-color:light rgb(209, 209, 171);
 
+ #btn{
+  border: none;
+  padding: 5px;
+  background-color: rgb(145, 108, 64);
+  border-radius: 10%;
+}
 
 header {
   background-color: #4e342e;
@@ -25,7 +31,7 @@ h1 {
 }
 
 .filters button {
-  background-color: #a1887f;
+  background-color: #926250;
   color: white;
   padding: 10px 20px;
   margin: 0 10px;
@@ -45,7 +51,7 @@ h1 {
   flex-wrap: wrap;
   justify-content: center;
   gap: 25px;
-  padding: 20px;
+  padding: 20px;;
 }
 
 .menu-item {
