--- a/menu.css
+++ b/menu.css
@@ -1,17 +1,37 @@
 
-body {
+body{
   font-family: Arial, sans-serif;
   background-color: #e8ebbd;
   margin: 0;
   padding: 0;
  background-color:light rgb(209, 209, 171);
-
- #btn{
-  border: none;
-  padding: 5px;
-  background-color: rgb(145, 108, 64);
-  border-radius: 10%;
 }
+#btn{
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  padding: 10px 16px;
+  background-color: #744040;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 16px;
+  z-index: 1000;
+}
+
+  
+
+ body.dark {
+  background-color: #1e1e1e;
+  color: #ffffff;
+}
+
+body.dark .menu-item {
+  background-color: #2c2c2c;
+  border-color: #444;
+}
+
 
 header {
   background-color: #4e342e;
@@ -23,6 +43,9 @@ header {
 h1 {
   margin: 0;
   font-size: 36px;
+}
+p{
+  font-size: 20px;
 }
 
 .filters {
@@ -51,7 +74,7 @@ h1 {
   flex-wrap: wrap;
   justify-content: center;
   gap: 25px;
-  padding: 20px;;
+  padding: 20px;
 }
 
 .menu-item {
@@ -94,4 +117,3 @@ h1 {
 .hidden {
   display: none;
 }
-
