--- a/style.css
+++ b/style.css
@@ -7,11 +7,80 @@ body {
 
 
 #btn{
-  border: none;
+ border: none;
   padding: 5px;
-  background-color: bisque;
-  border-radius: 10%;
+  background-color: rgb(227, 227, 26);
+  border-radius: 3%;
+  position: relative;     
+  top: 13px;           
+  left:450px;         
+  padding: 10px 20px;
+  background-color: #d2ae2dd3;
+  color: white;
+  border: none;
+  font-size: 16px;
 }
+
+  
+.modal {
+  display: none;
+  position: fixed;
+  top: 0; 
+  right:0;
+  width: 100%; height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 999;
+}
+#openModal {
+  position:relative;     
+  top: 210px;;
+  right:220px;
+  transform: translate(-50%, -50%);
+  padding: 12px 24px;
+  background-color: #826a58;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 15px;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  transition: background-color 0.3s ease;
+}
+
+#openModal:hover {
+  background-color: #563d2d;
+}
+
+
+h3{
+  color:rgb(102, 200, 219);
+  margin-bottom:20px;
+}
+
+.modal-content {
+  background:black;
+  width: 400px; 
+  margin:15% auto;         
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  position:relative;
+  color:rgb(245, 251, 247);
+
+}
+
+.close {
+  position: absolute;
+  right: 15px;
+  top: 10px;
+  font-size: 24px;
+  color: #888;
+  cursor: pointer;
+}
+
+
+
+
 .container{
   text-align:right;
   display:flex;
@@ -37,7 +106,7 @@ body {
 
 .nav-container{
 
-  display: flex;
+  display:flex;
    background-color: #4b2e2e;
    justify-content: center;
    align-items: center;
@@ -45,11 +114,9 @@ body {
 }
 
 .navbar {
-
   display: flex;
   justify-content:center;
   list-style-type: none;
- 
   padding: 15px;
 }
 
@@ -57,7 +124,7 @@ body {
   list-style-type: none;
   display: flex;
   justify-content: center;
-  gap: 40px;
+  gap: 32px;
 }
 
 .nav-links  a {
@@ -76,18 +143,20 @@ body {
 
 
 header {
-  background: #d7ccc8;
+  color:black;
   padding: 2rem;
   text-align: center;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   margin-bottom: 20px;
 }
 
 h1 {
   margin-bottom: 20px;
   font-size: 2.5rem;
-  color: #3e2723;
+  color:chocolate;
   text-size-adjust: 100%;
+}
+p{
+  font-size: 20px;
 }
 
 .gallery {
@@ -96,6 +165,7 @@ h1 {
   justify-content: center;
   gap: 2rem;
   padding: 2rem;
+
 }
 
 .coffee-card {
@@ -104,7 +174,7 @@ h1 {
   padding: 1rem;
   width: 250px;
   text-align: center;
-  box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+  box-shadow: 0 8px 16px rgba(239, 237, 109, 0.748);
   transition: transform 0.3s ease;
 }
 
@@ -129,9 +199,5 @@ footer {
   transition: opacity 0.6s ease, transform 0.6s ease;
 }
 
-.fade-in.visible {
-  opacity: 1;
-  transform: translate(0);
-}
 
 
