--- a/menu.css
+++ b/menu.css
@@ -1,7 +1,7 @@
 
 body{
   font-family: Arial, sans-serif;
-  background-color: #e8ebbd;
+  background-color: #edf1ae;
   margin: 0;
   padding: 0;
  background-color:light rgb(209, 209, 171);
@@ -34,7 +34,7 @@ body.dark .menu-item {
 
 
 header {
-  background-color: #4e342e;
+  background-color: #5a3c35;
   color: white;
   text-align: center;
   padding: 30px 10px;
@@ -54,7 +54,7 @@ p{
 }
 
 .filters button {
-  background-color: #926250;
+  background-color: #68141b;
   color: white;
   padding: 10px 20px;
   margin: 0 10px;
@@ -66,7 +66,7 @@ p{
 }
 
 .filters button:hover {
-  background-color: #6d4c41;
+  background-color: #813641;
 }
 
 .menu {
@@ -79,9 +79,9 @@ p{
 
 .menu-item {
   width: 260px;
-  background-color: #fff;
+  background-color: #6b3434;
   border-radius: 15px;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 3px 10px rgb(245, 229, 61);
   overflow: hidden;
   transition: transform 0.3s;
 }
@@ -99,11 +99,11 @@ p{
 
 .menu-info h3 {
   margin: 10px 0 5px;
-  color: #4e342e;
+  color: #f6f0ef;
 }
 
 .menu-info p {
-  color: #6d4c41;
+  color: #fffaf9;
   font-size: 14px;
   margin: 0;
 }
