--- a/contact.css
+++ b/contact.css
@@ -56,7 +56,7 @@ input:focus, textarea:focus {
   outline: none;
 }
 button {
-  background-color: #ff7f50;
+  background-color: #6c4030;
   color: white;
   border: none;
   padding: 12px 25px;
