--- a/style.css
+++ b/style.css
@@ -8,13 +8,23 @@ body {
   margin: 0;
   font-family: "Segoe UI", sans-serif;
   background: #deb591;
-  color: #4e342e;
+  color: #453937;
 }
 
 body.dark {
   background: #2c2c2c;
   color: #f5f5f5;
 }
+.cafe-logo {
+  position: fixed;
+  top: 10px;
+  left: 40px;
+  width: 60px;
+  height: 50px;
+  z-index: 999;
+  border-radius: 10px;
+}
+
 
 .navbar {
   position: fixed;
@@ -22,7 +32,7 @@ body.dark {
   left: 0;
   width: 100%;
   background-color: #4b2e2e;
-  display: flex;
+   display: flex;
   justify-content: center;
   align-items: center;
   padding: 20px;
@@ -40,8 +50,9 @@ body.dark {
   text-decoration: none;
   color: white;
   font-size: 18px;
-  transition: background-color 0.3s;
+   transition: background-color 0.3s;
 }
+
 
 .nav-links a:hover {
   background-color: #ffc107;
@@ -63,6 +74,8 @@ body.dark {
   font-size: 16px;
   z-index: 1000;
 }
+
+
 .modal {
   display: none;
   position: fixed;
@@ -168,7 +181,7 @@ p {
 
 footer {
   background: #6d4c41;
-  color: #fff;
+  color: white;
   padding: 1rem;
   text-align: center;
 }
