--- a/menu.css
+++ b/menu.css
@@ -1,4 +1,3 @@
-
 body{
   font-family: Arial, sans-serif;
   background-color: #deb591;
@@ -6,6 +5,37 @@ body{
   padding: 0;
  background-color:light rgb(209, 209, 171);
 }
+ .menu-navbar {
+  background-color: #5a3c35;
+  color: white;
+  margin: 0 auto;
+  text-align: center;
+  text-align: center;
+  padding: 30px 10px;
+  font-size:18px;
+}
+
+.menu-nav-links {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  margin-top: 10px;
+  padding: 0;
+}
+
+.menu-nav-links li a {
+  color: white;
+  text-decoration: none;
+}
+
+ .menu-nav-links li a:hover {
+  background-color: #ffc107;
+  color: #5a3c35;
+  padding: 6px;
+  border-radius: 5px;
+}
+
 #btn{
   position: absolute;
   top: 20px;
@@ -19,8 +49,6 @@ body{
   font-size: 16px;
   z-index: 1000;
 }
-
-  
 
  body.dark {
   background-color: #1e1e1e;
@@ -128,4 +156,3 @@ footer {
   justify-content: center;
   align-items: center;
 }
-
