added theme button on contact page

--- a/menu.css
+++ b/menu.css
@@ -41,7 +41,7 @@ body{
   top: 20px;
   right: 20px;
   padding: 10px 16px;
-  background-color: #763c3c;
+  background-color: chocolate;
   color: white;
   border: none;
   border-radius: 6px;
