--- a/about.css
+++ b/about.css
@@ -13,11 +13,11 @@ body {
 }
 
 #btn {
-  position: absolute;
-  top: 692px;
-  right: 90px;
+  position:absolute;
+  top: 13px;
+  right: 20px;
   padding: 10px 16px;
-  background-color: #744040;
+  background-color: chocolate;
   color: white;
   border: none;
   border-radius: 6px;
@@ -31,7 +31,7 @@ body.dark {
   color: #221e1e;
 }
 
-body.dark .menu-item {
+body.dark .about-item {
   background-color: #2c2c2c;
   border-color: #444;
 }
@@ -52,7 +52,7 @@ body.dark .menu-item {
   display: flex;
   justify-content: center;
   list-style-type: none;
-  padding: 15px;
+  padding: 18px;
 }
 
 .nav-links {
