--- a/contact.css
+++ b/contact.css
@@ -38,6 +38,24 @@ body {
   padding: 6px;
   border-radius: 5px;
  }
+#btn{
+ position:absolute;
+  top: 13px;
+  right: 20px;
+  padding: 10px 16px;
+  background-color: chocolate;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 16px;
+  z-index: 1000;
+}
+
+body.dark {
+  background-color: #2c2c2c;
+  color: #f5f5f5;
+}
 
 .contact-section {
   max-width: 600px;
