--- a/about.css
+++ b/about.css
@@ -31,11 +31,6 @@ body.dark {
   color: #221e1e;
 }
 
-body.dark .about-item {
-  background-color: #2c2c2c;
-  border-color: #444;
-}
-
 .nav-container {
   display: flex;
   background-color: #4b2e2e;
@@ -102,65 +97,27 @@ body.dark .about-us {
 .about-us p {
   font-size: 18px;
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
 }
   .footer p {
     margin: 0;
     padding: 0;
   }
 
-
 .story-section {
   padding: 20px 20px;
   background-color: #deb591;
 }
 
-.story-content {
-  display: inline-flex;
-  flex-direction: column-reverse;
-  gap: 100px;
-  max-width: 200px;
-  margin: 100px;
-  align-items: left;
-  flex-wrap: wrap;
-}
-
-.story-text {
-  flex: 2;
-  min-width: 100px;
-}
-
 .story-text h2 {
-  font-size: 100;
+  font-size: 40px;
   color: #b94a0b;
-  margin-bottom: 1px;
+  margin-bottom: 20px;
+  
 }
 
 .story-text p {
   font-size: 1.1rem;
-
-}
-
-.story-image {
-  flex: 2;
-  min-width: 100px;
-  height:200px;
-}
-
-.story-image img {
-  width: 100px;
-  border-radius: 100px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-.story-position {
-  float: left;
-  margin: 0 20px 20px 0;
-  width: 0px;
-  height: auto;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s ease;
 }
 
 .team-section {
@@ -220,13 +177,13 @@ h1 {
 
 .gallery-section h2 {
   font-size: 2rem;
-  color: #6b4f3b;
+  color: #2e2016;
   margin-bottom: 30px;
 }
 
 .gallery-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
   max-width: 1300px;
   margin: auto;
@@ -237,13 +194,13 @@ h1 {
   height: 200px;
   object-fit: cover;
   border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-  transition: transform 0.3s ease;
+ 
 }
 
 .gallery-item img:hover {
   transform: scale(1.05);
 }
+
 footer {
   background: #6d4c41;
   color: white;
@@ -266,7 +223,7 @@ footer {
   }
 
   .story-text h2 {
-    font-size: 32px !important;
+    font-size: 32px ;
   }
 
   .story-text p {
@@ -295,7 +252,7 @@ footer {
   }
 
   .gallery-grid {
-    grid-template-columns: 1fr !important;
+    grid-template-columns: 1fr;
     gap: 15px;
     padding: 0 10px;
   }
