--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body.dark {
 }
 
 #btn {
-  position:absolute;
+  position:fixed;
   top: 20px;
   right: 20px;
   padding: 10px 16px;
@@ -158,7 +158,7 @@ p {
 }
 
 .coffee-card {
-  background: linear-gradient(145deg, #c88013, #ffe0e2);
+  background: linear-gradient(145deg, #c88013,#ffe0e2);
   border-radius: 16px;
   padding: 1rem;
   width: 250px;
