--- a/about.css
+++ b/about.css
@@ -6,8 +6,8 @@
 
 body {
   font-family: sans-serif;
-  background-color:#deb591;
-  color: #be3333;
+  background-color:antiquewhite;
+  color: antiquewhite;
   display: flex;
   min-height: 100vh;
 }
@@ -77,6 +77,15 @@ body.dark {
 .gallery-section {
   margin-top: 20px;
 }
+
+
+.para{
+  margin: 10px;
+  padding: 9px;
+  background-color: rgb(236, 186, 110);
+  border-radius: 6px;
+}
+
 
 .about-us {
   background-color: #deb591;
